// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loadDump should work: dumped 1`] = `
{
  "nodeInfos": {
    "_node": {
      "id": "_node",
      "raw": [
        "[[[ ref ]]] #0 -> bar",
        "[[[ ref ]]] #1 -> baz",
        "[[[ ref ]]] #2 -> foo.1",
        "[[[ ref ]]] #3 -> foo",
      ],
      "referredBy": [
        {
          "path": [
            "replies",
          ],
          "sourceNodeId": "foo",
        },
      ],
      "refs": [
        {
          "path": [
            0,
          ],
          "targetNodeId": "bar",
        },
        {
          "path": [
            1,
          ],
          "targetNodeId": "baz",
        },
        {
          "path": [
            2,
          ],
          "targetNodeId": "foo.1",
        },
        {
          "path": [
            3,
          ],
          "targetNodeId": "foo",
        },
      ],
      "schemaId": "#/Message/replies",
    },
    "bar": {
      "id": "bar",
      "raw": {
        "id": "bar",
        "text": "Hi",
      },
      "referredBy": [
        {
          "path": [
            0,
          ],
          "sourceNodeId": "_node",
        },
      ],
      "refs": [],
      "schemaId": "Message",
    },
    "baz": {
      "id": "baz",
      "raw": {
        "id": "baz",
        "text": "Bye",
      },
      "referredBy": [
        {
          "path": [
            1,
          ],
          "sourceNodeId": "_node",
        },
      ],
      "refs": [],
      "schemaId": "Message",
    },
    "foo": {
      "id": "foo",
      "raw": {
        "id": "foo",
        "replies": "[[[ ref ]]] #0 -> _node",
        "text": "Hello",
      },
      "referredBy": [
        {
          "path": [
            3,
          ],
          "sourceNodeId": "_node",
        },
      ],
      "refs": [
        {
          "path": [
            "replies",
          ],
          "targetNodeId": "_node",
        },
      ],
      "schemaId": "Message",
    },
    "foo.1": {
      "id": "foo.1",
      "raw": {
        "id": "foo",
        "text": "Hey?",
      },
      "referredBy": [
        {
          "path": [
            2,
          ],
          "sourceNodeId": "_node",
        },
      ],
      "refs": [],
      "schemaId": "Message",
    },
  },
  "schemaIds": [
    "Message",
    "#/Message/replies",
  ],
}
`;

exports[`loadDump should work: dumped with writeKey 1`] = `
{
  "nodeInfos": {
    "_node": {
      "id": "_node",
      "raw": [
        "[[[ ref ]]] #0 -> bar",
        "[[[ ref ]]] #1 -> baz",
        "[[[ ref ]]] #2 -> foo.1",
        "[[[ ref ]]] #3 -> foo",
      ],
      "referredBy": [
        {
          "path": [
            "replies",
          ],
          "sourceNodeId": "foo",
        },
      ],
      "refs": [
        {
          "path": [
            0,
          ],
          "targetNodeId": "bar",
        },
        {
          "path": [
            1,
          ],
          "targetNodeId": "baz",
        },
        {
          "path": [
            2,
          ],
          "targetNodeId": "foo.1",
        },
        {
          "path": [
            3,
          ],
          "targetNodeId": "foo",
        },
      ],
      "schemaId": "#/Message/replies",
    },
    "bar": {
      "id": "bar",
      "raw": {
        "id": "bar",
        "text": "Hi",
      },
      "referredBy": [
        {
          "path": [
            0,
          ],
          "sourceNodeId": "_node",
        },
      ],
      "refs": [],
      "schemaId": "Message",
    },
    "baz": {
      "id": "baz",
      "raw": {
        "id": "baz",
        "text": "Bye",
      },
      "referredBy": [
        {
          "path": [
            1,
          ],
          "sourceNodeId": "_node",
        },
      ],
      "refs": [],
      "schemaId": "Message",
    },
    "foo": {
      "id": "foo",
      "raw": {
        "id": "foo",
        "replies": "[[[ ref ]]] #0 -> _node",
        "text": "Hello",
      },
      "referredBy": [
        {
          "path": [
            3,
          ],
          "sourceNodeId": "_node",
        },
      ],
      "refs": [
        {
          "path": [
            "replies",
          ],
          "targetNodeId": "_node",
        },
      ],
      "schemaId": "Message",
    },
    "foo.1": {
      "id": "foo.1",
      "raw": {
        "id": "foo.1",
        "text": "Hey?",
      },
      "referredBy": [
        {
          "path": [
            2,
          ],
          "sourceNodeId": "_node",
        },
      ],
      "refs": [],
      "schemaId": "Message",
    },
  },
  "schemaIds": [
    "Message",
    "#/Message/replies",
  ],
}
`;

exports[`loadDump should work: loaded 1`] = `
{
  "nodeInfos": {
    "_node.2": {
      "id": "_node.2",
      "raw": [
        "[[[ ref ]]] #0 -> bar.1",
        "[[[ ref ]]] #1 -> baz.1",
        "[[[ ref ]]] #2 -> foo.3",
        "[[[ ref ]]] #3 -> foo.2",
      ],
      "referredBy": [
        {
          "path": [
            "replies",
          ],
          "sourceNodeId": "foo.2",
        },
      ],
      "refs": [
        {
          "path": [
            0,
          ],
          "targetNodeId": "bar.1",
        },
        {
          "path": [
            1,
          ],
          "targetNodeId": "baz.1",
        },
        {
          "path": [
            2,
          ],
          "targetNodeId": "foo.3",
        },
        {
          "path": [
            3,
          ],
          "targetNodeId": "foo.2",
        },
      ],
      "schemaId": "#/Message/replies",
    },
    "bar.1": {
      "id": "bar.1",
      "raw": {
        "id": "bar",
        "text": "Hi",
      },
      "referredBy": [
        {
          "path": [
            0,
          ],
          "sourceNodeId": "_node.2",
        },
      ],
      "refs": [],
      "schemaId": "Message",
    },
    "baz.1": {
      "id": "baz.1",
      "raw": {
        "id": "baz",
        "text": "Bye",
      },
      "referredBy": [
        {
          "path": [
            1,
          ],
          "sourceNodeId": "_node.2",
        },
      ],
      "refs": [],
      "schemaId": "Message",
    },
    "foo.2": {
      "id": "foo.2",
      "raw": {
        "id": "foo",
        "replies": "[[[ ref ]]] #0 -> _node.2",
        "text": "Hello",
      },
      "referredBy": [
        {
          "path": [
            3,
          ],
          "sourceNodeId": "_node.2",
        },
      ],
      "refs": [
        {
          "path": [
            "replies",
          ],
          "targetNodeId": "_node.2",
        },
      ],
      "schemaId": "Message",
    },
    "foo.3": {
      "id": "foo.3",
      "raw": {
        "id": "foo.1",
        "text": "Hey?",
      },
      "referredBy": [
        {
          "path": [
            2,
          ],
          "sourceNodeId": "_node.2",
        },
      ],
      "refs": [],
      "schemaId": "Message",
    },
  },
  "schemaIds": [
    "Message",
    "#/Message/replies",
  ],
}
`;
